Fixed text alignment for work section for tablets

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -249,4 +249,25 @@ body{
       width: 425px;
     }
   }
+
+  .experience{
+    .work-header-container{
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+    }
+  }
+  .work-description{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding-left: 80px;
+    padding-right: 80px;
+    text-align: center;
+    li{
+      padding: 5px 0px;
+      list-style: none;
+    }
+  }
 }
